[package]
name = "tooling"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
identity_eddsa_verifier = { git = "https://github.com/iotaledger/identity.rs", branch="main", features = ["ed25519"] }
identity_iota = { git = "https://github.com/iotaledger/identity.rs", branch="main", default-features = false, features = [ "domain-linkage", "resolver", "iota-client"] }
identity_stronghold = { git = "https://github.com/iotaledger/identity.rs", branch="main", default-features = false }
iota-sdk = { version = "1.1.5", default-features = false, features = ["tls", "client", "stronghold"] }
tokio = { version = "1.29", default-features = false, features = ["rt"] }
serde_json = { version = "1.0", default-features = false }
rand = "0.8.5"

[lib]
path = "src/utils.rs"
